# ledger-matrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.circleci/: config.yml
.github/workflows/: main.yml
app/: Makefile
app/src/: addr.c  apdu_handler.c  coin.h  crypto.c  crypto.h  crypto_helper.c  crypto_helper.h  parser.c  parser_impl.c  parser_txdef.h  rlp.c  rlp.h
app/src/common/: actions.h  parser.h  parser_common.h  tx.c
docs/: APDUSPEC.md  BUILD.md
example-vue/: package-lock.json  package.json
example-vue/vue_example/: App.vue
example-vue/vue_example/components/: LedgerExample.vue
example-web-hid-usb/: package-lock.json  package.json
example-web-hid-usb/src/: index.html  main.js
fuzz/: parser_parse.cpp
js/: README.md  package.json
js/src/: consts.ts  helper.ts  index.ts  types.ts
tests/: common.cpp  crypto.cpp  example.cpp  mantx.cpp  manual_testvectors.json  parser_impl.cpp  rlp.cpp  test_utils.cpp  testcases.json  ui_output.cpp  ui_tests.cpp  utils.cpp
tests/util/: testcases.cpp  testcases.h
tests_zemu/: package.json
tests_zemu/tests/: common.ts  device.ts  standard.test.ts  transactions.test.ts
